Closed Bug 283080 Opened 21 years ago Closed 21 years ago

Training.dat not updating since 02/19/05 build.

Categories

(Thunderbird :: General, defect)

x86
Windows XP
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird1.1

People

(Reporter: davebate, Assigned: mscott)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050221 Firefox/1.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050221 Firefox/1.0+ New junk and un-junk not being updated to training.dat since 02/19/05. Thunderbird version 1.0+ (20050221). Reproducible: Always Actual Results: Training.dat not updating. Expected Results: The new junk data should be added to training.dat.
Depends on: 245499
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → Thunderbird1.1
This is a regression from 245499. On shut down, we are no longer able to get the profile dir service because its been released so we can't get the training file. The work around is to cache the training file locally so we don't need to fetch it on exit. I also think we should shorten up the write timer....
Attached patch the fix — — Splinter Review
Attachment #175164 - Flags: superreview?(bienvenu)
Attachment #175164 - Flags: superreview?(bienvenu) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
So we're not flushing on profile switch? Ugh :-( Is there a bug filed for that?
training.dat is not being created/updated in my profile with a handful of incoming mail accounts, even after fully recreating the profile except for old mail content copied in. see bug 283372
Was this just recently marked as fixed? Are there still training.dat issues? I still see less than a 50% success rate with junk email.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: