Bug #283080 --> bayesian training set is not getting flushed to disk on exit because the profile directory service has already gone away.

sr=bienvenu